<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background">
   <TableLayout
       android:id="@+id/table"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       android:background="@color/green">
       <TableRow
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <TextView
               android:id="@+id/whatssap"
               android:layout_width="wrap_content"
               android:layout_height="50dp"
               android:text="@string/whatssapp"
               android:textStyle="bold"
               android:textSize="22sp"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               android:layout_margin="16dp"

               />
           <ImageView
               android:id="@+id/imgCamera"
               android:layout_width="50dp"
               android:layout_height="50dp"
               android:src="@drawable/camera"
               android:layout_margin="16dp"
               android:scaleType="centerInside"
               app:layout_constraintStart_toEndOf="@id/whatssap"
               app:layout_constraintTop_toTopOf="parent"/>
           <ImageView
               android:id="@+id/imgSearch"
               android:layout_width="50dp"
               android:layout_height="50dp"
               android:src="@drawable/search"
               app:layout_constraintStart_toEndOf="@id/imgCamera"
               app:layout_constraintTop_toTopOf="parent"
               android:layout_margin="16dp"
               android:scaleType="centerInside"
               />
       </TableRow>
       <TableRow
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/row2">

           <ImageView
               android:id="@+id/imgGroup"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginBottom="4dp"
               android:layout_marginTop="4dp"
               android:src="@drawable/groups"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@id/whatssap"
               />
           <TextView
               android:id="@+id/discussion"
               android:layout_width="90dp"
               android:layout_height="wrap_content"
               android:text="@string/discussion"
               android:textSize="14sp"
               android:textStyle="bold"
               app:layout_constraintStart_toEndOf="@id/imgGroup"
               app:layout_constraintTop_toBottomOf="@id/whatssap"
               android:layout_margin="4dp"
               />
           <TextView
               android:id="@+id/statut"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/statut"
               android:textSize="14sp"
               android:textStyle="bold"
               app:layout_constraintStart_toEndOf="@id/discussion"
               app:layout_constraintTop_toBottomOf="@id/whatssap"
               android:layout_margin="4dp"/>
           <TextView
               android:id="@+id/appels"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/appels"
               android:textSize="14sp"
               android:textStyle="bold"
               app:layout_constraintStart_toEndOf="@id/statut"
               app:layout_constraintTop_toBottomOf="@id/whatssap"
               android:layout_margin="4dp"/>

       </TableRow>
   </TableLayout>
        <Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="16dp"
            />
    <ImageView
        android:layout_margin="12dp"
        android:id="@+id/prof1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/table"
        android:src="@drawable/profile5"
        />
    <TextView
        android:id="@+id/name1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/table"
        app:layout_constraintStart_toEndOf="@id/prof1"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:textStyle="bold"
        android:text="@string/mehdi"
        android:textSize="16sp"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/table"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:textStyle="bold"
        android:text="@string/_16_34"
        android:gravity="end"
        android:textSize="16sp"
        android:textColor="@color/green"
        />
    <TextView
        android:id="@+id/mssj1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name1"
        app:layout_constraintStart_toEndOf="@id/prof1"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="20dp"
        android:textStyle="bold"
        android:textColor="@color/black"

        android:text="@string/wesh_a_bro_cv"
        android:textSize="16sp"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name1"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        android:gravity="end"
        android:src="@drawable/two"
        />
    <ImageView
        android:id="@+id/prof2"
        android:layout_margin="12dp"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/prof1"
        android:src="@drawable/profile2"
        />
    <TextView
        android:id="@+id/name2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mssj1"
        app:layout_constraintStart_toEndOf="@id/prof2"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        android:text="@string/nour"
        android:textSize="16sp"
        android:textColor="@color/black"

        />
    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mssj1"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:textStyle="bold"
        android:text="@string/_9_5"
        android:gravity="end"
        android:textSize="16sp"
        android:textColor="@color/green"
        />
    <TextView
        android:id="@+id/mssj2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name2"
        app:layout_constraintStart_toEndOf="@id/prof2"
        android:layout_marginTop="12dp"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        android:text="@string/cc"
        android:textSize="16sp"
        android:textColor="@color/black"

        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name2"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        android:gravity="end"
        android:src="@drawable/six"
        />
    <ImageView
        android:id="@+id/prof3"
        android:layout_margin="12dp"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/prof2"
        android:src="@drawable/profile3"
        />
    <TextView
        android:id="@+id/name3"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mssj2"
        app:layout_constraintStart_toEndOf="@id/prof3"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        android:text="@string/wissal"
        android:textSize="16sp"
        android:textColor="@color/black"

        />
    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mssj2"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:textStyle="bold"
        android:text="@string/hier"
        android:gravity="end"
        android:textSize="16sp"
        android:textColor="@color/green"
        />
    <TextView
        android:id="@+id/mssj3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name3"
        app:layout_constraintStart_toEndOf="@id/prof3"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="20dp"
        android:textStyle="bold"
        android:text="@string/cv_sa_marche_tt"
        android:textSize="16sp"
        android:textColor="@color/black"

        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name3"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        android:gravity="end"
        android:src="@drawable/ic_baseline_done_all_24"
        />
    <ImageView
        android:id="@+id/prof4"
        android:layout_margin="12dp"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/prof3"
        android:src="@drawable/profile4"
        />
    <TextView
        android:id="@+id/name4"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mssj3"
        app:layout_constraintStart_toEndOf="@id/prof4"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        android:text="@string/saad_dev"
        android:textSize="16sp"
        android:textColor="@color/black"

        />
    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mssj3"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:textStyle="bold"
        android:text="@string/hier"
        android:gravity="end"
        android:textSize="16sp"
        android:textColor="@color/green"
        />
    <TextView
        android:id="@+id/mssj4"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name4"
        app:layout_constraintStart_toEndOf="@id/prof4"
        android:layout_marginTop="12dp"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        android:text="@string/dkhoul_teams"
        android:textSize="16sp"
        android:textColor="@color/black"

        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name4"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        android:gravity="end"
        android:src="@drawable/four"
        />
    <ImageView
        android:id="@+id/prof5"
        android:layout_margin="12dp"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/prof4"
        android:src="@drawable/profile7"
        />
    <TextView
        android:id="@+id/name5"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mssj4"
        app:layout_constraintStart_toEndOf="@id/prof5"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        android:text="@string/oumnia"
        android:textSize="16sp"
        android:textColor="@color/black"

        />
    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mssj4"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:textStyle="bold"
        android:text="@string/_17_11_2022"
        android:gravity="end"
        android:textSize="16sp"
        android:textColor="@color/green"
        />
    <TextView
        android:id="@+id/mssj5"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name5"
        app:layout_constraintStart_toEndOf="@id/prof5"
        android:layout_marginTop="12dp"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        android:text="@string/d_acc"
        android:textSize="16sp"
        android:textColor="@color/black"

        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name5"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        android:gravity="end"
        android:src="@drawable/livree"
        />
    <ImageView
        android:id="@+id/prof6"
        android:layout_margin="12dp"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/prof5"
        android:src="@drawable/profile6"
        />
    <TextView
        android:id="@+id/name6"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mssj5"
        app:layout_constraintStart_toEndOf="@id/prof6"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        android:text="@string/hala"
        android:textColor="@color/black"

        android:textSize="16sp"
        />
    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mssj5"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:textStyle="bold"
        android:text="15/11/2022"
        android:gravity="end"
        android:textSize="16sp"
        android:textColor="@color/green"
        />
    <TextView
        android:id="@+id/mssj6"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name6"
        app:layout_constraintStart_toEndOf="@id/prof6"
        android:layout_marginTop="12dp"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        android:text="@string/isgi"
        android:textColor="@color/black"

        android:textSize="16sp"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name6"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        android:gravity="end"
        android:src="@drawable/five"
        />

</androidx.constraintlayout.widget.ConstraintLayout>