<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">
    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/green">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/whatssap"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/whatssapp"
                android:textStyle="bold"
                android:textSize="22sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="16dp"

                />
            <ImageView
                android:id="@+id/imgCamera"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/camera"
                android:layout_margin="16dp"
                android:scaleType="centerInside"
                app:layout_constraintStart_toEndOf="@id/whatssap"
                app:layout_constraintTop_toTopOf="parent"/>
            <ImageView
                android:id="@+id/imgSearch"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/search"
                app:layout_constraintStart_toEndOf="@id/imgCamera"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="16dp"
                android:scaleType="centerInside"
                />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/row2">

            <ImageView
                android:id="@+id/imgGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:src="@drawable/groups"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/whatssap"
                />
            <TextView
                android:id="@+id/discussion"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/discussion"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/imgGroup"
                app:layout_constraintTop_toBottomOf="@id/whatssap"
                android:layout_margin="4dp"
                />
            <TextView
                android:id="@+id/statut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/statut"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/discussion"
                app:layout_constraintTop_toBottomOf="@id/whatssap"
                android:layout_margin="4dp"/>
            <TextView
                android:id="@+id/appels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appels"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/statut"
                app:layout_constraintTop_toBottomOf="@id/whatssap"
                android:layout_margin="4dp"/>

        </TableRow>
    </TableLayout>
    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        />
    <ImageView
        android:layout_marginTop="20dp"
        android:id="@+id/communities"
        android:layout_width="200dp"
        android:layout_height="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/table"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/communities"
        />
    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/communities"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/presentation_des_communautes"
        android:textSize="22sp"
        android:layout_margin="12dp"
        android:gravity="center"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/text1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/longText"
        android:textSize="14sp"
        android:gravity="center"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_margin="12dp"
        app:layout_constraintTop_toBottomOf="@id/text2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/btn"
        android:backgroundTint="@color/green"

        android:textSize="14sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>